[project]
name = "pwp-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Damian Rakowski",email = "damian.rakowski93@o2.pl"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pwp_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
